# kdiff3-kf5

./: CMakeLists.txt
icons/: CMakeLists.txt
kdiff3fileitemactionplugin/: CMakeLists.txt  kdiff3fileitemaction.cpp  kdiff3fileitemaction.h  kdiff3fileitemaction.json
src/: CMakeLists.txt  diff.cpp  difftextwindow.cpp  directorymergewindow.cpp  directorymergewindow.h  fileaccess.cpp  fileaccess.h  guiutils.h  kdiff3.cpp  kdiff3.h  kdiff3_part.cpp  kdiff3_part.h  kdiff3_shell.cpp  kdiff3_shell.h  main.cpp  merger.cpp  mergeresultwindow.cpp  optiondialog.cpp  optiondialog.h  options.h  pdiff.cpp  progress.cpp  smalldialogs.cpp
